--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 *.o
 *.a
 *.so
-*.swp
+
+# Folders
+_obj
+_test
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -14,6 +17,8 @@ _cgo_defun.c
 _cgo_gotypes.go
 _cgo_export.*
 
+_testmain.go
 
-
-
+*.exe
+*.test
+*.prof
